Fixed single tab rows with no navigations not showing first tab pane

--- a/app/assets/stylesheets/koi/components/_listing.css.scss
+++ b/app/assets/stylesheets/koi/components/_listing.css.scss
@@ -32,8 +32,8 @@
   .input__tight {
     // pull the input out of the row, so the row height is determined by
     // the buttons
-    margin-top: -4px;
-    margin-bottom: -4px;
+    margin-top: -5px;
+    margin-bottom: -5px;
   }
 
 }
