--- a/app/assets/stylesheets/koi/components/_typography.css.scss
+++ b/app/assets/stylesheets/koi/components/_typography.css.scss
@@ -156,10 +156,13 @@ strong i, strong em {
 
 small {
   @include font($body-font);
-  font-size: $small-unit;
+  font-size: $small-font-size;
   line-height: 1;
 }
 
+.small {
+  font-size: $small-font-size;
+}
 
 // LINKS
 
